@@ -12,6 +12,9 @@ Laurent Petit <laurent dot petit at gmail dot com>
 
 `0.32.1` released on July ..., 2015
 
+=== Editor
+- double-click when in code now does the same as if the user had triggered the `Expand Selection Right` command. The net result is that you can select entire forms by double clicking on their start character ; you can also select entire symbols even if there are hypens inside, etc. Fixes #516
+
 === Process Launcher
 - Fix an issue on OS X to preventively fix the PATH environement variable which is generally not even set with `/usr/local/bin` included. Fixes #709
 
